Update to 19w04b, remove `data modify` optimisations and bugfixes, they are now part of vanilla (mostly)

--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ minecraft {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:18w50a"
-	mappings "net.fabricmc:yarn:18w50a.90"
-	modCompile "net.fabricmc:fabric-loader:0.3.2.91"
+	minecraft "com.mojang:minecraft:19w04b"
+	mappings "net.fabricmc:yarn:19w04b.2"
+	modCompile "net.fabricmc:fabric-loader:0.3.4.104"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	// modCompile "net.fabricmc:fabric:0.1.2.63"
